# seidr

./: .gitignore  README.md  config.py  requirements.txt  setup.cfg
app/: __init__.py  api.py  views.py
app/interfaces/: __init__.py  base_model_rest_api.py
app/models/: employees.py
app/routes/: employees.py
app/routes/security/: auth.py  permissions.py  user.py
app/security/: permission_view.py  roles.py  users.py  views_menus.py
app/templates/: index.html
example/: run.py
example/app/: apis.py  config.py  models.py
seidr/: __init__.py  cli.py  config.py  views.py
seidr/apis/: InfoApi.py  MenuApi.py  __init__.py  info.py
seidr/apis/security/: auth.py  permission_view.py  permissions.py  roles.py  users.py
seidr/interfaces/: __init__.py  api.py  base_model_rest_api.py  convert.py  filters.py
seidr/security/: __init__.py  auth.py  permission_view.py  permissions.py  roles.py  users.py  views_menus.py
seidr/utils/: decorators.py
src/: __init__.py  config.py
src/interfaces/: base_model_rest_api.py
src/security/: permission_view.py  permissions.py  roles.py  users.py  views_menus.py
