[metadata]
name = seidr
author = Datatactics GmbH
author_email = i.keser@datatactics.de
description = A set of extensions for FlaskAppbuilder
url = https://github.com/dttctcs/seidr

[options]
packages = find:
install_requires =
    Flask-AppBuilder==4.1.3
    
[options.entry_points]
console_scripts =
    seidr=seidr.cli:cli
