[metadata]
name = seidr
author = Datatactics GmbH
author_email = info@datatactics.de
description = A set of extensions for FlaskAppbuilder
url = https://github.com/dttctcs/seidr

[options]
packages = find:
install_requires =
    Flask-AppBuilder
    Flask-Migrate
    marshmallow-enum
    werkzeug==2.2.3
    
[options.entry_points]
console_scripts =
    seidr=seidr.cli:cli
